# jips

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.claude/: settings.local.json
.github/workflows/: ci.yml
dicts/: .gitignore
jips/: audioserver.py  dictclient.py  enums.py  exc.py
jips/templates/: index.html
tests/: conftest.py  test_audioserver.py
