[project]
name = "jips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "filetype>=1.2.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "jsonschema>=4.25.0",
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
]
